--- a/src/sass/layout/_swiper.scss
+++ b/src/sass/layout/_swiper.scss
@@ -54,6 +54,7 @@
             writing-mode: horizontal-tb;
             gap:0px;
             padding: 0px;
+            padding-bottom: 40px;
         }
     }
 }
