slider最大高度設定 人才永續含RWD完 新增公司頁面

--- a/src/layout/header.html
+++ b/src/layout/header.html
@@ -35,7 +35,7 @@
             </ul>
         </li>
     
-        <li><a href="#" class="p2">人才永續</a> </li>
+        <li><a href="talent.html" class="p2">人才永續</a> </li>
     </ul>
 
     <ul class="login main-menu">
@@ -86,7 +86,7 @@
                     <li><a href="archive-issue.html">&emsp;企業特刊</a> </li>
                 </ul>
             </li>
-            <li><a href="#">人才永續</a></li>
+            <li><a href="talent.html">人才永續</a></li>
             <li class="search-wrap">
                 <div class="search">
                     <button type="submit" class="searchButton">
