--- a/src/sass/layout/_card-company-tag.scss
+++ b/src/sass/layout/_card-company-tag.scss
@@ -42,7 +42,7 @@
             .card-content{
                 @include flex($d:column);
                 gap:12px;
-                background: $c-white;
+                // background: $c-white;
                 padding: 0px;
                 .job-title{
                     @include flex($a-i:center);
