--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -73,7 +73,7 @@ table {
   margin: auto;
 }
 
-.happiness-wrapper .ad-area-wrapper .ad-area-container, .happiness-wrapper .happinessJob, .application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .info .container, .application-wrapper .application-container .brand-category .section-title, .archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .index-wrapper .category, .index-wrapper .article, .index-wrapper .cardJob, .jobTag-section, .companyTag-section, .cardJob-section, nav {
+.company-wrapper .ad-area-wrapper .ad-area-container, .company-wrapper .companyJob, .talent-wrapper .talent-ad .ad-container, .talent-wrapper .talentSection, .happiness-wrapper .ad-area-wrapper .ad-area-container, .happiness-wrapper .happinessJob, .application-wrapper .application-container .brand-list .container, .application-wrapper .application-container .info .container, .application-wrapper .application-container .brand-category .section-title, .archive-tem .ad-area-wrapper .ad-area-container, .archive-tem .archive-tem-c, .index-wrapper .category, .index-wrapper .article, .index-wrapper .cardJob, .jobTag-section, .companyTag-section, .cardJob-section, nav {
   margin: auto;
   padding: 0 30px;
   max-width: 1920px;
@@ -106,7 +106,7 @@ table {
   text-align: center;
 }
 
-.form-select select, .pgnb-style2 .g-pagination select, .job-tag > p, .btn, .happiness-wrapper .happinessJob .company-select .advanced, .application-wrapper .application-container .form ul li .g-file .inputfile + label, .application-wrapper .application-container .form ul li select, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li, .index-wrapper .article .article-item, .jobTag-section .card-jobTag, .companyTag-section .card-jobTag, .card-job {
+.form-select select, .pgnb-style2 .g-pagination select, .job-tag > p, .btn, .company-wrapper .companyJob .company-select .advanced, .happiness-wrapper .happinessJob .company-select .advanced, .application-wrapper .application-container .form ul li .g-file .inputfile + label, .application-wrapper .application-container .form ul li select, .archive-tem .archive-tem-c .archive .archive-item .col.post-content .link .category ul li, .index-wrapper .article .article-item, .jobTag-section .card-jobTag, .companyTag-section .card-jobTag, .card-job {
   cursor: pointer;
 }
 
@@ -154,7 +154,7 @@ footer {
   transition: all 0.3s ease;
 }
 .container-footer hr {
-  border: 1px solid #DDB593;
+  border: 0.1px solid #DDB593;
   width: 100%;
 }
 @media screen and (max-width: 1024px) {
@@ -834,6 +834,13 @@ nav .main-menu li:hover > ul {
 .swiper {
   width: 100%;
   height: 100%;
+  max-height: 550px;
+}
+@media screen and (max-width: 1024px) {
+  .swiper {
+    max-height: 1000px;
+    min-height: 800px;
+  }
 }
 
 .swiper-slide {
@@ -887,7 +894,14 @@ nav .main-menu li:hover > ul {
 }
 @media screen and (max-width: 1024px) {
   .swiper-slide .swiper-title p {
+    font-size: 17px;
     line-height: 1.5rem;
+    letter-spacing: 0.1rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .swiper-slide .swiper-title p {
+    font-size: 16px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -979,7 +993,6 @@ nav .main-menu li:hover > ul {
   align-content: unset;
   align-items: unset;
   gap: 12px;
-  background: white;
   padding: 0px;
 }
 .companyTag-section .card-jobTag .content-section .card-content .job-title {
@@ -1140,7 +1153,6 @@ nav .main-menu li:hover > ul {
   align-content: unset;
   align-items: unset;
   gap: 16px;
-  background: white;
   padding: 0px;
 }
 .jobTag-section .card-jobTag .content-section .card-content .job-title {
@@ -2251,6 +2263,263 @@ nav .main-menu li:hover > ul {
 }
 @media screen and (max-width: 480px) {
   .happiness-wrapper .ad-area-wrapper .ad-area-container {
+    flex-wrap: wrap;
+  }
+}
+
+.talent-wrapper .talent-banner {
+  margin-top: 79px;
+}
+@media screen and (max-width: 1024px) {
+  .talent-wrapper .talent-banner {
+    margin-top: 69px;
+  }
+}
+.talent-wrapper .talentSection {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  margin: auto;
+  gap: 48px;
+  padding: 88px 120px;
+  background: white;
+}
+@media screen and (max-width: 1024px) {
+  .talent-wrapper .talentSection {
+    padding: 66px 80px;
+    gap: 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .talent-wrapper .talentSection {
+    padding: 40px 30px;
+    gap: 24px;
+  }
+}
+.talent-wrapper .talentSection > .title {
+  border-bottom: none;
+  padding: 0px;
+}
+.talent-wrapper .talentSection .content-section {
+  background: #F7F1E7;
+}
+.talent-wrapper .talentSection .content-section .job-tag > .tag {
+  border: 1px solid #CE8B52 !important;
+}
+.talent-wrapper .talentSection .content-section .job-tag > .tag:hover {
+  border: 1px solid #CE8B52 !important;
+}
+.talent-wrapper .talentSection select {
+  border: 1px solid #cecece !important;
+}
+.talent-wrapper .talent-ad {
+  background: white;
+  padding: 5rem 0;
+}
+.talent-wrapper .talent-ad .ad-container {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: center;
+  align-content: unset;
+  align-items: center;
+  gap: 30px;
+  margin: 0 auto;
+  max-width: 1420px;
+}
+@media screen and (max-width: 1024px) {
+  .talent-wrapper .talent-ad .ad-container {
+    display: flex;
+    flex-wrap: unset;
+    flex-direction: column;
+    justify-content: unset;
+    align-content: unset;
+    align-items: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .talent-wrapper .talent-ad .ad-container {
+    flex-wrap: wrap;
+  }
+}
+.talent-wrapper .talent-ad .ad-container img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-width: 600px;
+  flex: 3;
+}
+.talent-wrapper .talent-ad .ad-container .ad-content {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  gap: 16px;
+}
+@media screen and (max-width: 768px) {
+  .talent-wrapper .talent-ad .ad-container .ad-content {
+    display: flex;
+    flex-wrap: unset;
+    flex-direction: column;
+    justify-content: unset;
+    align-content: unset;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.company-wrapper .title-swiper {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  margin: 33px 0px 0px 0px;
+}
+.company-wrapper .title-swiper .company-title {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+  flex: 3;
+}
+.company-wrapper .title-swiper .company-category {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+}
+.company-wrapper .title-swiper .company-category .address {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+}
+.company-wrapper .title-swiper .company-img {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+}
+.company-wrapper .title-swiper .company-img .img-award {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: unset;
+}
+.company-wrapper .title-swiper swiper {
+  width: 200px;
+  flex: 5;
+}
+.company-wrapper .companyJob {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  margin: auto;
+  gap: 48px;
+  padding: 88px 120px;
+  background: #F7F1E7;
+}
+@media screen and (max-width: 1024px) {
+  .company-wrapper .companyJob {
+    padding: 66px 80px;
+    gap: 32px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .company-wrapper .companyJob {
+    padding: 40px 30px;
+    gap: 24px;
+  }
+}
+.company-wrapper .companyJob > .title {
+  border-bottom: none;
+  padding: 0px;
+}
+.company-wrapper .companyJob .company-select {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: column;
+  justify-content: unset;
+  align-content: unset;
+  align-items: flex-end;
+  gap: 16px;
+}
+.company-wrapper .companyJob .company-select .advanced {
+  color: #CE8B52;
+  font-size: 14px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+.company-wrapper .companyJob .company-select .select-flex {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: space-between;
+  align-content: unset;
+  align-items: unset;
+  width: 400px;
+  gap: 20px;
+}
+@media screen and (max-width: 768px) {
+  .company-wrapper .companyJob .company-select .select-flex {
+    display: flex;
+    flex-wrap: unset;
+    flex-direction: column;
+    justify-content: unset;
+    align-content: unset;
+    align-items: center;
+    width: 400px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .company-wrapper .companyJob .company-select .select-flex {
+    width: 260px;
+  }
+}
+.company-wrapper .ad-area-wrapper {
+  background: white;
+  padding: 5rem 0;
+}
+.company-wrapper .ad-area-wrapper .ad-area-container {
+  display: flex;
+  flex-wrap: unset;
+  flex-direction: unset;
+  justify-content: unset;
+  align-content: unset;
+  align-items: center;
+  gap: 30px;
+  margin: 0 auto;
+  max-width: 1420px;
+}
+.company-wrapper .ad-area-wrapper .ad-area-container .block {
+  flex: 1;
+  flex-basis: 100%;
+}
+.company-wrapper .ad-area-wrapper .ad-area-container .block img {
+  width: 100%;
+}
+@media screen and (max-width: 480px) {
+  .company-wrapper .ad-area-wrapper .ad-area-container {
     flex-wrap: wrap;
   }
 }
