--- a/src/sass/layout/_card-job-tag.scss
+++ b/src/sass/layout/_card-job-tag.scss
@@ -45,7 +45,7 @@
             .card-content{
                 @include flex($d:column);
                 gap:16px;
-                background: $c-white;
+                // background: $c-white;
                 padding: 0px;
                 .job-title{
                     @include flex($a-i:center);
