--- a/src/sass/layout/_swiper.scss
+++ b/src/sass/layout/_swiper.scss
@@ -3,7 +3,11 @@
 .swiper {
     width: 100%;
     height: 100%;
-
+    max-height: 550px;
+    @include pad{
+        max-height: 1000px;
+        min-height: 800px;
+    }
 }
 
 .swiper-slide {
@@ -38,7 +42,12 @@
         p{
             line-height: 140%;
             @include pad{
+                font-size: $p2;
                 line-height: 1.5rem;
+                letter-spacing: 0.1rem;
+            }
+            @include mini-pad{
+                font-size: $m-p2;
             }
             @include mobile{
                 padding: 0px 20px;
