--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,8 @@
 @import 'page/happiness-company';
 @import 'page/happiness-job';
 @import 'page/single-post';
+@import 'page/talent';
+@import 'page/company-story';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
