幸福企業*4含RWD完

--- a/src/sass/page/_company-walfare.scss
+++ b/src/sass/page/_company-walfare.scss
@@ -158,10 +158,51 @@
             padding: 0px;
         }
 
-        .storySection{
+        .walfareSection{
             @include flex($d:column,$a-i:flex-start);
             gap:52px;
             position: relative;
+
+            .walfare-group{
+                @include flex;
+                width: 100%;
+
+                @include mini-pad{
+                    @include flex($d:column);
+                    gap: 12px;
+                }
+                .group-title{
+                    flex:0.3;
+                    color: $c-primary;
+                }
+                .item-group{
+                    flex: 1;
+                    @include basic_grid(4,1fr,40px,32px);
+
+                    @include mini-pad{
+                        @include basic_grid(2,1fr,40px,32px);
+                    }
+
+                    &:nth-child(2){
+                        li:nth-child(1){
+                            color: $c-secondary;
+                        }
+                    }
+                    .walfare-item{
+                        @include flex($d:column);
+                        gap: 8px;
+
+                        @include mini-pad{
+                            gap:2px;
+                        }
+
+                        li{
+                            color: $c-gray;
+                        }
+
+                    }
+                }
+            }
         }
         .link {
             @include flex($d:column,$a-i: flex-start, $j-c: space-between, $w: wrap);
