--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -27,6 +27,7 @@
 @import 'page/company-job';
 @import 'page/company-news';
 @import 'page/company-walfare';
+@import 'page/lottery';
 
 //google-font
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
