--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -381,3 +381,12 @@ input,select,textarea{
         }
     }
 }
+
+// 彈窗背景共用
+.dialog-bg {
+    @include absolute($top: 0, $left: 0, $right: 0, $bottom: 0, $z-i: 9991);
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
